# textprep

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
tests/: conftest.py  test_cleaner.py  test_errata.py  test_splitter.py
tests/example_docs/: RHSA-2022_0886.md
textprep/: __init__.py  cleaner.py  errata.py  splitter.py
