[tool.poetry]
name = "textprep"
version = "0.0.1"
description = "Prepare various Red Hat test sources for RAG."
authors = ["Major Hayden <major@redhat.com>"]
repository = "https://github.com/major/textprep"
documentation = "https://major.github.io/textprep/"
readme = "README.md"
packages = [
  {include = "textprep"}
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain-text-splitters = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
deptry = "^0.20.0"
mypy = "^1.12.0"
pre-commit = "^4.0.1"
tox = "^4.23.0"
pytest-sugar = "^1.0.0"
pytest-randomly = "^3.15.0"
pytest-cov = "^5.0.0"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["textprep"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=textprep", "--cov-report=term-missing", "--cov-report=html"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["textprep"]
